# LeanOpenGL

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  main.cpp  stb_image.h
Shaders/Frag/: frag.fs
Shaders/Vertex/: vert.fs
include/glad/: glad.h
src/: glad.c
